grammar.js
    program: ($) =>
      choice(
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          field("commands", $.complete_commands),
          optional(field("trailing", $.linebreak)),
          optional($._free_trailing_layout),
        ),
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          optional(trailingComment($)),
        ),
      ),

    _assignment_name_lexeme: ($) => lexical($, $._assignment_name_begin),

    complete_commands: ($) =>
      seq(
        field("command", $.complete_command),
        repeat(
          seq(
            choice(
              field(
                "separator",
                alias($._separator_led_newline_list, $.newline_list),
              ),
              seq($._term_continuation, field("separator", $.newline_list)),
              field(
                "separator",
                alias($._here_document_led_newline_list, $.newline_list),
              ),
            ),
            optional($._horizontal_layout),
            field("command", $.complete_command),
          ),
        ),
        optional($._term_boundary),
      ),

    complete_command: ($) =>
      seq(
        field("body", $.list),
        optional(
          choice(
            seq(
              $._terminator_ahead,
              optional($._horizontal_layout),
              field("terminator", $.separator_op),
            ),
            $._term_boundary,
          ),
        ),
      ),

    list: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            $._list_continuation,
            optional($._horizontal_layout),
            field("separator", $.separator_op),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
      ),

    and_or: ($) =>
      seq(
        field("pipeline", $.pipeline),
        repeat(
          seq(
            $._and_or_continuation,
            optional($._horizontal_layout),
            field("operator", choice($._and_if, $._or_if)),
            linebreakLayout($),
            field("pipeline", $.pipeline),
          ),
        ),
      ),

    pipeline: ($) =>
      seq(
        optional(
          seq(field("negation", $.bang), optional($._horizontal_layout)),
        ),
        field("sequence", $.pipe_sequence),
      ),

    pipe_sequence: ($) =>
      seq(
        field("command", $.command),
        repeat(
          seq(
            $._pipe_continuation,
            optional($._horizontal_layout),
            physical($, $._punct_pipe, "|"),
            linebreakLayout($),
            field("command", $.command),
          ),
        ),
      ),

    command: ($) =>
      choice(
        field("body", $.simple_command),
        $._redirectable_compound_command,
        field("body", $.function_definition),
      ),

    _redirectable_compound_command: ($) => redirectableCompoundCommand($),

    separator_op: ($) =>
      choice(
        physical($, $._punct_ampersand, "&"),
        physical($, $._punct_semicolon, ";"),
      ),

    _operator_separator: ($) =>
      separatorOperatorLayout($, field("operator", $.separator_op)),

    _newline_separator: ($) => field("newlines", $.newline_list),

    _separator_led_newline_separator: ($) =>
      field("newlines", alias($._separator_led_newline_list, $.newline_list)),

    _here_document_led_separator: ($) =>
      field(
        "newlines",
        alias($._here_document_led_newline_list, $.newline_list),
      ),

    _here_document_led_operator_separator: ($) =>
      seq(
        field("operator", $.separator_op),
        field("linebreak", alias($._here_document_led_linebreak, $.linebreak)),
      ),

    term: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            choice(
              field(
                "separator",
                alias($._separator_led_newline_separator, $.separator),
              ),
              seq(
                $._term_continuation,
                choice(
                  seq(
                    optional($._horizontal_layout),
                    field(
                      "separator",
                      alias($._operator_separator, $.separator),
                    ),
                  ),
                  field("separator", alias($._newline_separator, $.separator)),
                ),
              ),
              seq(
                optional($._closing_layout),
                field(
                  "separator",
                  alias($._here_document_led_operator_separator, $.separator),
                ),
              ),
              field(
                "separator",
                alias($._here_document_led_separator, $.separator),
              ),
            ),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
        optional($._term_boundary),
      ),

    compound_list: ($) =>
      seq(
        optional(field("leading", $.linebreak)),
        optional($._horizontal_layout),
        field("body", $.term),
        optional(
          choice(
            seq(
              optional(
                seq($._terminator_ahead, optional($._horizontal_layout)),
              ),
              field("terminator", alias($._operator_separator, $.separator)),
            ),
            field("terminator", alias($._newline_separator, $.separator)),
          ),
        ),
      ),

    _and_if: ($) => alias($._and_if_lexeme, $.and_if),
    _or_if: ($) => alias($._or_if_lexeme, $.or_if),
    function_definition: ($) => functionDefinitionWithBody($, $.function_body),

    function_body: ($) => $._redirectable_compound_command,

    fname: ($) => lexical($, $._fname_begin),
    compound_command: ($) =>
      choice(
        $.brace_group,
        $.subshell,
        $.for_clause,
        $.case_clause,
        $.if_clause,
        $.while_clause,
        $.until_clause,
      ),

    brace_group: ($) =>
      seq(
        physical($, $._left_brace, "{"),
        compoundListField($, "body"),
        optional($._closing_layout),
        physical($, $._right_brace, "}"),
      ),

    simple_command: ($) =>
      choice(
        seq(
          field("prefix", $.cmd_prefix),
          optional(
            seq(
              $._word_separator,
              field("word", $.cmd_word),
              optional(field("suffix", $.cmd_suffix)),
            ),
          ),
        ),
        seq(field("name", $.cmd_name), optional(field("suffix", $.cmd_suffix))),
      ),

    cmd_prefix: ($) =>
      seq(
        choice(
          field("assignment", $.assignment_word),
          field("redirect", $.io_redirect),
        ),
        repeat(
          choice(
            seq(
              $._assignment_separator,
              field("assignment", $.assignment_word),
            ),
            ...commandRedirectContinuations($),
          ),
        ),
      ),

    cmd_name: ($) => $.word,

    cmd_word: ($) => $.word,

    cmd_suffix: ($) =>
      repeat1(
        choice(
          seq($._word_separator, field("word", $.word)),
          ...commandRedirectContinuations($),
        ),
      ),

    assignment_word: ($) =>
      prec.dynamic(
        ASSIGNMENT_WORD_PRECEDENCE,
        seq(
          field("name", alias($._assignment_name_lexeme, $.variable_name)),
          physical($, $._punct_equals, "="),
          optional(field("value", $.assignment_value)),
        ),
      ),
    variable_name: ($) => lexical($, $._variable_name_begin),
    assignment_value: ($) => $._assignment_source_word,

    _assignment_source_word: ($) =>
      repeat1(
        choice(
          alias($._assignment_tilde_expansion, $.tilde_expansion),
          $._assignment_word_part,
        ),
      ),

    word: ($) => $._source_word,

    _source_word: ($) =>
      seq(
        $._word_begin,
        choice(
          seq($.tilde_expansion, repeat($._word_part)),
          repeat1($._word_part),
        ),
      ),

    literal: ($) => lexical($, $._literal_begin),

    ...fallbackRules("word"),
    ...fallbackRules("assignment"),
    ...fallbackRules("parameter"),
    escaped_character: ($) => lexical($, $._escaped_character_begin),
    single_quoted: ($) =>
      seq(
        physical($, $._sq_open, "'"),
        optional($.single_quote_content),
        physical($, $._sq_close, "'"),
      ),
    single_quote_content: ($) => lexical($, $._single_quote_content_begin),
    double_quoted: ($) =>
      seq(
        physical($, $._dq_open, '"'),
        repeat(doubleQuotedPart($)),
        physical($, $._dq_close, '"'),
      ),

    double_quote_text: ($) => lexical($, $._double_quote_text_begin),

    parameter_expansion: ($) =>
      parameterExpansion($, $._braced_parameter_expansion),

    _braced_parameter_expansion: ($) =>
      bracedParameterExpansion($, $._parameter_expansion_tail),

    command_substitution: ($) =>
      commandSubstitution($, $._command_or_arithmetic_substitution_start),

    _command_or_arithmetic_substitution_start: ($) =>
      $._command_substitution_start,
    command_substitution_body: ($) =>
      prec.left(substitutionCommandsBody($, $._closing_layout)),

    backquote_substitution: ($) =>
      seq(
        backquoteDelimiter($, $._backquote_start),
        optional(field("body", $.backquote_substitution_body)),
        backquoteDelimiter($, $._backquote_end),
      ),
    backquote_substitution_body: ($) => $._substitution_body,

    _substitution_body: ($) =>
      prec.left(substitutionCommandsBody($, $._horizontal_layout)),

    _arithmetic_expansion_start: ($) =>
      arithmeticExpansionStart($, $._arithmetic_left_parenthesis),

    _arithmetic_dynamic_expansion_start: ($) =>
      arithmeticExpansionStart($, $._arithmetic_dynamic_left_parenthesis),

    arithmetic_expansion: ($) =>
      choice(
        closedArithmeticExpansion(
          $,
          $._arithmetic_expansion_start,
          $._arithmetic_assignment_expression,
          arithmeticClosingLayout($),
        ),
        closedArithmeticExpansion(
          $,
          $._arithmetic_dynamic_expansion_start,
          $.arithmetic_dynamic_expression,
          arithmeticClosingLayout($),
        ),
      ),

    _arithmetic_assignment_expression: ($) =>
      choice(
        $.arithmetic_assignment_expression,
        $._arithmetic_conditional_expression,
      ),

    arithmetic_number: ($) => lexical($, $._arithmetic_number_begin),
    newline_list: ($) => prec.right(repeat1(choice(...newlineListElements($)))),

    _separator_led_newline_list: ($) =>
      ledNewlineList($, seq($._separator_newline, $._layout_newline)),

    _here_document_led_newline_list: ($) =>
      ledNewlineList($, $.here_document_sequence),

    linebreak: ($) => $.newline_list,

    _horizontal_layout: ($) => seq(optional($._layout_begin), $._blank),
    _closing_layout: ($) => $._blank,
    _word_separator: ($) => wordSeparator($, $._word_separator_begin),

    _assignment_separator: ($) =>
      wordSeparator($, $._assignment_separator_begin),

    _free_trailing_layout: ($) =>
      prec.right(1, choice($._closing_layout, trailingComment($))),
